Slight refactoring, nothing to see here. And some lazy corner cutting, whoopsie.